<resources>
    <string name="app_name">Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="toast_message">Please select the file to download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The %s repository has been downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_name">Repo Download</string>
    <string name="notification_channel_description">Project repository downloaded.</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name_detail">File name:</string>
    <string name="status_detail">Status:</string>
    <string name="ok_button_name">Ok</string>

    <string name="radio_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="url_glide">https://github.com/bumptech/glide/archive/refs/heads/master.zip</string>
    <string name="url_loadapp">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/refs/heads/master.zip</string>
    <string name="url_retrofit">https://github.com/square/retrofit/archive/refs/heads/master.zip</string>

    <string name="success_status">Success</string>
    <string name="fail_status">Fail</string>
    <string name="progress_status">Progress</string>
</resources>
